# Smart-Locker

./: README.md
Raspberry/: CMakeLists.txt
Raspberry/src/: LockerHandles.cpp
Web-UI/Admin/: Admin.html  LogAdmin.html
Web-UI/Login/: login.html
Web-UI/User/: Dashboard.html
locker-android/: settings.gradle
locker-android/app/: build.gradle
locker-android/app/src/androidTest/java/com/example/locker/: ExampleInstrumentedTest.kt
locker-android/app/src/main/: AndroidManifest.xml
locker-android/app/src/main/java/com/example/locker/: MainActivity.kt
locker-android/app/src/main/res/color/: bottom_navigation_tint_selector.xml
locker-android/app/src/main/res/drawable/: borderd_btn.xml  cut_edge_gray.xml  ic_lock_24px.xml  ic_lock_open_24px.xml
locker-android/app/src/main/res/layout/: activity_main.xml  fragment_account.xml  fragment_assessment.xml  fragment_base.xml  fragment_home.xml  fragment_login.xml  fragment_register.xml
locker-android/app/src/main/res/menu/: main_menu.xml
locker-android/app/src/main/res/navigation/: nav.xml  navigation.xml
locker-android/app/src/main/res/values/: colors.xml  dimen.xml  strings.xml  styles.xml
locker-android/app/src/main/res/xml/: nsc.xml
locker-android/app/src/test/java/com/example/locker/: ExampleUnitTest.kt
locker-android/gradle/wrapper/: gradle-wrapper.properties
smart-locker-server/: pom.xml  sync-server.sh
smart-locker-server/src/main/java/edu/iot/locker/: SmartLockerApplication.java
smart-locker-server/src/main/resources/: application-production.yaml  application.yaml
(+54 files in other folders)
